--- a/index.html
+++ b/index.html
@@ -1,126 +1,98 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>@criccoder</title>
-  <link rel="stylesheet" href="https://cxh.pages.dev/style.css">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3501680502223299" crossorigin="anonymous"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>DTV HINDI LIVE STREAM</title>
+  <style>
+    html, body {
+      padding: 0;
+      margin: 0;
+      height: 100%;
+    }
+    iframe { 
+      width: 100vw;
+      height: 56.25vw;
+      background: none;
+      max-height: 100vh;
+      max-width: 177.78vh;
+      margin: auto;
+    }
+    .button-54 {
+      font-family: "Open Sans", sans-serif;
+      font-size: 16px;
+      letter-spacing: 2px;
+      text-transform: uppercase;
+      color: #fff;
+      background: linear-gradient(45deg, #ff0047, #6a00ff);
+      border: none;
+      padding: 10px 20px;
+      border-radius: 30px;
+      cursor: pointer;
+      box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1);
+      transition: all 0.3s ease-in-out;
+    }
+    .button-54:hover {
+      background: linear-gradient(45deg, #ff7a7a, #8c7aff);
+      transform: scale(1.1);
+      box-shadow: 0 12px 20px rgba(0, 0, 0, 0.2);
+    }
+    a {
+      text-decoration: none;
+      color: white;
+    }
+    /* Disable right-click and keyboard shortcuts */
+    body {
+      -webkit-user-select: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+      user-select: none;
+    }
+    /* Prevent text selection */
+    * {
+      -webkit-touch-callout: none;
+      -webkit-user-select: none;
+      -khtml-user-select: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+      user-select: none;
+    }
+  </style>
+  <script>
+    // Disable right-click
+    document.addEventListener('contextmenu', function(e) {
+      e.preventDefault();
+    });
+    // Disable F12, Ctrl+Shift+I, and Ctrl+Shift+J
+    document.addEventListener('keydown', function(e) {
+      if (e.key === "F12" || (e.ctrlKey && e.shiftKey && (e.key === "I" || e.key === "J"))) {
+        e.preventDefault();
+      }
+    });
+  </script>
 </head>
 <body>
-<!-- partial:index.partial.html -->
-<!-- Fullscreen Video CSS -->
-<style>
-  #player {
-    position: absolute;
-    width: 100% !important;
-    height: 100% !important;
-  }
-</style>
+  <center>
+    <div class="player">
+      <iframe src="https://player.cricktv.site/jwplayer?dtv=https%3A%2F%2Fvkvsd55.okcdn.ru%2Fcmaf%2F7443308808935%2Fsig%2FesxrZxGt2cE%2FsrcIp%2F3.110.165.205%2Furls%2F45.136.22.88%2Fexpires%2F1734569291503%2FclientType%2F13%2FsrcAg%2FCHROME%2FfromCache%2F1%2Fmid%2F9109154376679%2Fid%2F7443308808935%2Fget%2Fdash_9109154376679.FR5QsSfmxmU.mpd&thumb=https%3A%2F%2Fi.mycdn.me%2FgetVideoPreview%3Fid%3D7443308808935%26idx%3D9%26type%3D39%26tkn%3DQeNdeKbw1bbFyowe6TF9W-v64rw%26fn%3Dvid_x" 
+              frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen>
+      </iframe>
+    </div>
 
-<!-- Player -->
-<div id="player"></div>
-<script src='https://content.jwplatform.com/libraries/KB5zFt7A.js'></script>
-<script>
-  const playerInstance = jwplayer("player").setup({
-    controls: true,
-    displaytitle: true,
-    autoplay: true,    
-    displaydescription: true,
-    abouttext: "",
-    aboutlink: "https://telegram.me/Criccoder",  // Updated Telegram channel link
+    <!-- BEGIN: Counter -->
+    <center>
+      <script type="text/javascript" src="//widget.supercounters.com/ssl/online_t.js"></script>
+      <script type="text/javascript">sc_online_t(1703448,"Watching....","#1d1d21");</script>
+      <noscript><a href="https://www.supercounters.com/"></a></noscript>
+    </center>
+    <!-- END: Counter -->
 
-    skin: {
-      name: "netflix"
-    },
-
-    logo: {
-      file: "",
-      link: "https://telegram.me/Criccoder"  // Updated Telegram channel link
-    },
-
-    captions: {
-      color: "#FFF",
-      fontSize: 14,
-      backgroundOpacity: 0,
-      edgeStyle: "raised"
-    },
-
-    playlist: [
-      {
-        image: "",
-        sources: [
-          {
-            file: "https://vkvsd63.okcdn.ru/cmaf/7420895300327/sig/vAxD2p3F77g/srcIp/13.203.71.167/urls/185.226.52.89/expires/1733938236976/clientType/13/srcAg/CHROME/fromCache/1/mid/8992305851367/id/7420895300327/get/dash_8992305851367.kdZZAqR8hIo.mpd",
-            label: "1080p",
-            default: true
-          }
-        ],
-      }
-    ],
-    advertising: {
-      client: "vast",
-      schedule: [
-        {
-          offset: "pre",
-          tag: ""
-        }
-      ]
-    }
-  });
-
-  playerInstance.on("ready", function () {
-    const playerContainer = playerInstance.getContainer();
-    const buttonContainer = playerContainer.querySelector(".jw-button-container");
-
-    // Rewind button functionality
-    const rewindContainer = playerContainer.querySelector(".jw-display-icon-rewind");
-    const rewindButton = rewindContainer.cloneNode(true);
-    const rewindIcon = rewindButton.querySelector(".jw-icon-rewind");
-    rewindIcon.style.transform = "scaleX(1)";
-    rewindIcon.ariaLabel = "Rewind 10 Seconds";
-
-    const nextContainer = playerContainer.querySelector(".jw-display-icon-next");
-    nextContainer.parentNode.insertBefore(rewindButton, nextContainer);
-
-    // Rewind functionality for the control bar
-    const rewindControlBarButton = buttonContainer.querySelector(".jw-icon-rewind");
-    const rewindControlBarClone = rewindControlBarButton.cloneNode(true);
-    rewindControlBarClone.style.transform = "scaleX(1)";
-    rewindControlBarClone.ariaLabel = "Rewind 10 Seconds";
-    buttonContainer.insertBefore(rewindControlBarClone, buttonContainer.firstChild);
-
-    // On click of rewind button, seek backward by 10 seconds
-    [rewindButton, rewindControlBarClone].forEach((button) => {
-      button.onclick = () => {
-        const currentPosition = playerInstance.getPosition();
-        const newPosition = Math.max(currentPosition - 10, 0); // Prevent going below 0
-        playerInstance.seek(newPosition);
-      };
-    });
-
-    // Detect adblock
-    playerInstance.on("adBlock", () => {
-      const modal = document.querySelector("div.modal");
-      modal.style.display = "flex";
-      document
-        .getElementById("close")
-        .addEventListener("click", () => location.reload());
-    });
-  });
-
-  // Confirmation message for joining Telegram channel
-  var a = confirm("Join For More Links!!");
-  if (a == true) {
-    window.location.href = "https://telegram.me/+_1wa-RPG3jM4MGU1";  // Updated Telegram channel link
-  }
-
-  function welcome() {
-    window.open("https://telegram.me/+_1wa-RPG3jM4MGU1");  // Updated Telegram channel link
-  }
-</script>
-
-<script disable-devtool-auto='true' src='https://cdn.jsdelivr.net/npm/disable-devtool' clear-log='true' disable-select='true' disable-copy='true' disable-cut='true' disable-paste='true'></script>
+    <center>
+      <button class="button-54" role="button">
+        <a href="https://t.me/+e31nJfvFTjY0N2Ux" target="_blank">Join Telegram</a>
+      </button>
+    </center>
+  </center>
 </body>
 </html>
-Telegram Logo
