--- a/index.html
+++ b/index.html
@@ -1,16 +1,21 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3501680502223299" crossorigin="anonymous"></script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3501680502223299"     
+    crossorigin="anonymous"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>DTV HINDI LIVE STREAM</title>
   <style>
-    html, body {
-      padding: 0;
-      margin: 0;
-      height: 100%;
-    }
+         html,
+               body {
+                       padding: 0;
+                               margin: 0;
+                                       height: 100%;
+                                               
+                                                     }
     iframe { 
       width: 100vw;
       height: 56.25vw;
@@ -18,59 +23,45 @@
       max-height: 100vh;
       max-width: 177.78vh;
       margin: auto;
+      position: inline;
+      top: 0; bottom: 0; left: 0; right: 0;
     }
+    /* CSS */
     .button-54 {
       font-family: "Open Sans", sans-serif;
       font-size: 16px;
       letter-spacing: 2px;
+      text-decoration: none;
       text-transform: uppercase;
-      color: #fff;
-      background: linear-gradient(45deg, #ff0047, #6a00ff);
-      border: none;
-      padding: 10px 20px;
-      border-radius: 30px;
+      color: #000;
       cursor: pointer;
-      box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1);
-      transition: all 0.3s ease-in-out;
+      border: 3px solid;
+      padding: 0.25em 0.5em;
+      box-shadow: 1px 1px 0px 0px, 2px 2px 0px 0px, 3px 3px 0px 0px, 4px 4px 0px 0px, 5px 5px 0px 0px;
+      position: relative;
+      user-select: none;
+      -webkit-user-select: none;
+      touch-action: manipulation;
+      margin: 10px;
     }
-    .button-54:hover {
-      background: linear-gradient(45deg, #ff7a7a, #8c7aff);
-      transform: scale(1.1);
-      box-shadow: 0 12px 20px rgba(0, 0, 0, 0.2);
+
+    .button-54:active {
+      box-shadow: 0px 0px 0px 0px;
+      top: 5px;
+      left: 5px;
     }
+
+    @media (min-width: 768px) {
+      .button-54 {
+        padding: 0.25em 0.75em;
+      }
+    }
+
     a {
       text-decoration: none;
-      color: white;
-    }
-    /* Disable right-click and keyboard shortcuts */
-    body {
-      -webkit-user-select: none;
-      -moz-user-select: none;
-      -ms-user-select: none;
-      user-select: none;
-    }
-    /* Prevent text selection */
-    * {
-      -webkit-touch-callout: none;
-      -webkit-user-select: none;
-      -khtml-user-select: none;
-      -moz-user-select: none;
-      -ms-user-select: none;
-      user-select: none;
+      color: black;
     }
   </style>
-  <script>
-    // Disable right-click
-    document.addEventListener('contextmenu', function(e) {
-      e.preventDefault();
-    });
-    // Disable F12, Ctrl+Shift+I, and Ctrl+Shift+J
-    document.addEventListener('keydown', function(e) {
-      if (e.key === "F12" || (e.ctrlKey && e.shiftKey && (e.key === "I" || e.key === "J"))) {
-        e.preventDefault();
-      }
-    });
-  </script>
 </head>
 <body>
   <center>
@@ -79,19 +70,26 @@
               frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen>
       </iframe>
     </div>
-
-    <!-- BEGIN: Counter -->
-    <center>
-      <script type="text/javascript" src="//widget.supercounters.com/ssl/online_t.js"></script>
-      <script type="text/javascript">sc_online_t(1703448,"Watching....","#1d1d21");</script>
-      <noscript><a href="https://www.supercounters.com/"></a></noscript>
-    </center>
-    <!-- END: Counter -->
+    <!-- BEGIN: Powered by Supercounters.com -->
+<center><script type="text/javascript" src="//widget.supercounters.com/ssl/online_t.js"></script><script type="text/javascript">sc_online_t(1703448,"Watching....","#1d1d21");</script><br><noscript><a href="https://www.supercounters.com/"></a></noscript>
+</center>
+<!-- END: Powered by Supercounters.com -->
 
     <center>
-      <button class="button-54" role="button">
-        <a href="https://t.me/+e31nJfvFTjY0N2Ux" target="_blank">Join Telegram</a>
-      </button>
+    <button class="button-54" role="button"><a href="https://t.me/+e31nJfvFTjY0N2Ux">Join Telegram</a></button>
+    <button class="button-54" role="button"><a href="https://whatsapp.com/channel/0029Va4L4Pl1nozD6gNTB80F">Join Whatsapp</a></button>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3501680502223299"
+    crossorigin="anonymous"></script>
+<!-- CRICKTV.SITE -->
+<ins class="adsbygoogle"
+    style="display:block"
+    data-ad-client="ca-pub-3501680502223299"
+    data-ad-slot="2443904970"
+    data-ad-format="auto"
+    data-full-width-responsive="true"></ins>
+<script>
+    (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
     </center>
   </center>
 </body>
